# safe-autonomy-dynamics

./: .act3-pt.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  compliance-requirements.txt  index.html  mkdocs-requirements.txt  mkdocs.yml  objects.inv  pyproject.toml  release.sh  requirements-jax.txt  requirements-mkdocs.txt  requirements.dep.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  version.py
.github/workflows/: build.yml  release-pypi.yml
api/: index.html
docs/: developer-guide.md  gen_ref_nav.py  index.md  install.md  quick-start-guide.md  troubleshooting-faq.md  user-guide.md
docs/api/: index.md
docs/api/cwh/: index.md
install/: index.html
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/base_models/: index.html
reference/cwh/__init__/: index.html
reference/cwh/point_model/: index.html
reference/cwh/rotational_model/: index.html
reference/cwh/sixdof_model/: index.html
reference/dubins/: index.html
reference/integrators/: index.html
reference/utils/: index.html
safe_autonomy_dynamics/: base_models.py  cwh.py  cwh_rotation.py  dubins.py  f16.py  integrators.py  utils.py
safe_autonomy_dynamics/cwh/: __init__.py  point_model.py  rotational_model.py  sixdof_model.py  sixdof_spacecraft.py  sun_model.py
scripts/: update-version-python.sh
search/: search_index.json
test/: conftest.py
test/test_cases/: CWHRotation2dSpacecraft_test_cases.yaml  CWHSpacecraft_test_cases.yaml  Dubins3dAircraft_test_cases.yaml  compare_entities_test_cases.yaml  entity_relative_metrics.yaml
test/test_simulators/test_entities/: conftest.py  test_CWHRotation2dSpacecraft.py  test_CWHSpacecraft.py  test_Dubins2dAircraft.py  test_Dubins3dAircraft.py  test_base_models.py  (+3 more)
tests/: conftest.py
tests/test_cases/: CWHRotation2dSpacecraft_test_cases.yaml  Dubins2dAircraft_test_cases.yaml  Dubins3dAircraft_test_cases.yaml  SixDOFSpacecraft_test_cases.yaml
(+8 files in other folders)
