[tool.poetry]
name = "safe-autonomy-dynamics"
version = "1.2.3"
description = "The safe-autonomy-dynamics package provides an API for dynamic systems supported by a library of common functions used to access and update system dynamics."
authors = [
    "Charles Keating <Charles.Keating@udri.udayton.edu>",
]
license = ""
readme = "README.md"
homepage = "https://github.com/act3-ace/safe-autonomy-dynamics.git"
repository = "https://github.com/act3-ace/safe-autonomy-dynamics.git"
documentation = 'https://github.com/act3-ace/safe-autonomy-dynamics/docs'
keywords = []
include = ["docs/*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [
        {include = "safe_autonomy_dynamics"},
    ]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.23.5"
jax = { version = "0.4.26", extras = ["cpu"], optional = true }
scipy = ">=1.10.0"
pydantic = "^2.6.2"
pint = "^0.22"

[tool.poetry.extras]
jax = ["jax"]

[tool.poetry.group.lint.dependencies]
pylint = "2.15.4"
flake8 = "3.9.2"
yapf = "^0.40.0"
mypy = "^1.8.0"
isort = "5.9.3"
bashate = "^2.1.0"
velin = "^0.0.11"
blacken-docs = "^1.12.1"
detect-secrets = "1.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "2.11.1"
pyinstrument = "^4.3.0"
twine = "^4.0.2"
coverage-badge = "^1.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.4.2"
mkdocs-material-extensions = "^1.0.3"
mkdocs-mermaid-plugin = "^0.1.1"
mkdocs-pdf-export-plugin = "^0.5.10"
mkdocstrings = "0.18.0"
mkdocs-autorefs = "^0.5.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.4"
pymdown-extensions = "^9.5"
pytkdocs = { version = ">=0.5.0", extras = ["numpy-style"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
